<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timed Task</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_executed">" executed "</string>
    <string name="notification_title_timedtask">TimedTask</string>
    <string name="about_author">"\n     \tAuthor:Daniel\n        "</string>
    <string name="about_content">"This software is a simple tools.If you have any comments and suggestions,Please contact me.\n        "</string>
    <string name="create_task_execute_day">Execute Day:</string>
    <string name="string_monday">Mo</string>
    <string name="string_tuesday">Tu</string>
    <string name="string_wednesday">We</string>
    <string name="string_thursday">Th</string>
    <string name="string_friday">Fr</string>
    <string name="string_saturday">Sa</string>
    <string name="string_sunday">Su</string>
    <string name="string_create">Create</string>
    <string name="string_cancle">Cancle</string>
    <string name="create_task_type">Task Type</string>
    <string name="create_avaliable">Avaliable</string>
    <string name="create_execute_time">Execute Time</string>
    
    <string name="string_save">Save</string>
    <string name="类型">Type:</string>
    <string name="list_item_type">Type:</string>
    <string name="list_item_time">Time:</string>
    <string name="list_item_week">Week:</string>
    
    
    <string name="menu_about">About</string>
    <string name="menu_create_task">Create Task</string>
	<string name="menu_setting">Setting</string>
	<string name="setting_title_language">Language</string>
	<string name="menu_exit">Exit</string>
	<string name="string_everyday">everyday</string>
</resources>