<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateTaskActivity" >

    <ScrollView
        android:id="@+id/scrollview_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/group_bottom"
        android:scrollbars="horizontal|vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/textview_weight1_style"
                    android:text="@string/create_task_type" />

                <Spinner
                    android:id="@+id/spinner_task_type"
                    style="@style/basic_weight1_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/textview_weight1_style"
                    android:text="@string/create_avaliable" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    style="@style/basic_weight1_style"
                    android:textOff="Off"
                    android:textOn="On" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/textview_weight1_style"
                    android:text="@string/create_execute_time" />

                <TimePicker
                    android:id="@+id/timePicker"
                    style="@style/basic_weight1_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task_execute_day" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/checkbox_mo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_monday" />

                        <CheckBox
                            android:id="@+id/checkbox_tu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_tuesday" />

                        <CheckBox
                            android:id="@+id/checkbox_we"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_wednesday" />

                        <CheckBox
                            android:id="@+id/checkbox_th"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_thursday" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/checkbox_fr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_friday" />

                        <CheckBox
                            android:id="@+id/checkbox_sa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_saturday" />

                        <CheckBox
                            android:id="@+id/checkbox_su"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_sunday" />

                        <CheckBox
                            android:id="@+id/checkbox_everyday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/string_everyday" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/group_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button_create"
            style="@style/basic_weight1_style"
            android:text="@string/string_create" />

        <Button
            android:id="@+id/button_cancle"
            style="@style/basic_weight1_style"
            android:text="@string/string_cancle" />
    </LinearLayout>

</RelativeLayout>